# python-project-52

./: .env.sample  .gitignore  22..txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
fixtures/: labels.json  statuses.json  tasks.json  test_label1.json  test_status1.json  test_task1.json  test_user1.json  users.json
labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/: __init__.py  dataclasses.py  mixin.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: urls.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/users/: views.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py
templates/: base.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/task_manager/: index.html  login.html  logout.html
templates/tasks/: create.html  delete.html  index.html  task.html  update.html
templates/users/: create.html  delete.html  update.html  users.html
users/: forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
