[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
authors = ["Makeev095 <makeev095095@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
setuptools = "^67.4.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.5"
django = "^4.1.7"
django-bootstrap-v5 = "^1.0.11"
django-extensions = "^3.2.1"
django-filter = "^22.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.1"
rollbar = "^0.16.3"
beautifulsoup4 = "^4.11.2"
attrs = "^22.2.0"
asgiref = "^3.6.0"
certifi = "^2022.12.7"
charset-normalizer = "^3.0.1"
exceptiongroup = "^1.1.0"
idna = "^3.4"
iniconfig = "^2.0.0"
packaging = "^23.0"
pycodestyle = "^2.10.0"
requests = "^2.28.2"
six = "^1.16.0"
urllib3 = "^1.26.14"
djangorestframework = "^3.14.0"
django-bootstrap4 = "^22.3"
flake8 = "2.0"
dj-database-url = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
